@@ -7,24 +7,24 @@ package cloud.tavitian.dedrmtools;
 import java.util.*;
 
 public final class Util {
-    public static final String copyright = "Copyright © 2022-2024 Paul Tavitian";
+    public static final String copyright = "Copyright © 2024 Paul Tavitian";
 
     private Util() {
     }
 
     /**
-     * @param byteArray The byte array to format as a string.
+     * @param data The byte array to format as a string.
      * @return A string representation of the byte array, resembling a Python byte string.
      */
-    public static String formatByteArray(byte[] byteArray) {
+    public static String formatByteArray(byte[] data) {
+        if (data == null) return "b''"; // Return an empty byte string if the array is null
+
         StringBuilder sb = new StringBuilder("b'");
 
-        for (byte b : byteArray) {
+        for (byte b : data) {
             int unsignedByte = b & 0xFF; // Convert signed byte to unsigned
-            // Printable ASCII range
-            // Non-printable range, display as \xNN
-            if (unsignedByte >= 32 && unsignedByte <= 126) sb.append((char) unsignedByte);
-            else sb.append(String.format("\\x%02x", unsignedByte));
+            if (unsignedByte >= 32 && unsignedByte <= 126) sb.append((char) unsignedByte); // Printable ASCII range
+            else sb.append(String.format("\\x%02x", unsignedByte)); // Non-printable range, display as \xNN
         }
 
         sb.append("'");
@@ -39,6 +39,12 @@ public final class Util {
      * @return A new byte array of the specified width, with <code>data</code> left-justified and padded with <code>padByte</code>.
      */
     public static byte[] ljustBytes(byte[] data, int width, byte padByte) {
+        if (data == null) {
+            data = new byte[width]; // Create a new array of 'width' size if the original array is null
+            Arrays.fill(data, padByte); // Fill the array with 'padByte'
+            return data;
+        }
+
         if (data.length >= width)
             return data; // No padding needed if the original array is already long enough
 
@@ -54,6 +60,8 @@ public final class Util {
      * @return The checksum of the byte array.
      */
     public static int sumBytes(byte[] data) {
+        if (data == null) return 0;
+
         int sum = 0;
 
         for (byte b : data) sum += b & 0xFF; // Use & 0xFF to ensure each byte is treated as an unsigned value
@@ -62,35 +70,44 @@ public final class Util {
     }
 
     /**
-     * @param array The byte array to search for a null byte.
+     * @param data The byte array to search for a null byte.
      * @return The index of the first null byte in the array, or the length of the array if no null byte is found.
      */
-    public static int indexOfNullByte(byte[] array) {
-        for (int i = 0; i < array.length; i++) if (array[i] == 0) return i;
+    public static int indexOfNullByte(byte[] data) {
+        if (data == null) return 0;
 
-        return array.length;
+        for (int i = 0; i < data.length; i++) if (data[i] == 0) return i;
+
+        return data.length;
     }
 
-    // Helper function to convert hex string to byte array
-    public static byte[] hexStringToByteArray(String s) {
+
+    /**
+     * @param s The hexadecimal string to convert to a byte array.
+     * @return The byte array representation of the hexadecimal string.
+     */
+    public static byte[] hexStringToByteArray(CharSequence s) {
         return HexFormat.of().parseHex(s);
     }
 
-    // Helper function to convert byte array to hex string
+    /**
+     * @param data The byte array to convert to a hexadecimal string.
+     * @return The hexadecimal string representation of the byte array.
+     */
     public static String byteArrayToHexString(byte[] data) {
         return HexFormat.of().formatHex(data);
     }
 
     // Helper function to concatenate byte arrays
-    public static byte[] concatenateArrays(byte[]... arrays) {
+    public static byte[] concatenateArrays(byte[]... data) {
         int totalLength = 0;
 
-        for (byte[] array : arrays) totalLength += array.length;
+        for (byte[] array : data) totalLength += array.length;
 
         byte[] result = new byte[totalLength];
         int offset = 0;
 
-        for (byte[] array : arrays) {
+        for (byte[] array : data) {
             System.arraycopy(array, 0, result, offset, array.length);
             offset += array.length;
         }
@@ -99,10 +116,18 @@ public final class Util {
     }
 
     public static int[] toIntegerArray(List<Integer> list) {
-        return list.stream().mapToInt(Integer::intValue).toArray();
+        if (list == null) return new int[0];
+
+        int[] data = new int[list.size()];
+
+        for (int i = 0; i < list.size(); i++) data[i] = list.get(i);
+
+        return data;
     }
 
     public static List<Integer> toIntegerList(int[] data) {
+        if (data == null) return Collections.emptyList();
+
         List<Integer> list = new ArrayList<>();
 
         for (int i : data) list.add(i);
@@ -115,10 +140,14 @@ public final class Util {
     }
 
     public static byte[] toByteArray(List<Integer> list) {
+        if (list == null) return new byte[0];
+
         return toByteArray(list, list.size());
     }
 
     public static byte[] toByteArray(List<Integer> list, int length) {
+        if (list == null) return new byte[0];
+
         byte[] array = new byte[length];
 
         for (int i = 0; i < length; i++) array[i] = list.get(i).byteValue();
@@ -126,10 +155,18 @@ public final class Util {
         return array;
     }
 
-    public static byte[] toByteArray(int[] array) {
-        byte[] result = new byte[array.length];
+    public static byte[] toByteArray(int[] data) {
+        if (data == null) return new byte[0];
 
-        for (int i = 0; i < array.length; i++) result[i] = (byte) array[i];
+        return toByteArray(data, data.length);
+    }
+
+    public static byte[] toByteArray(int[] data, int length) {
+        if (data == null) return new byte[0];
+
+        byte[] result = new byte[length];
+
+        for (int i = 0; i < length; i++) result[i] = (byte) data[i];
 
         return result;
     }
@@ -143,6 +180,8 @@ public final class Util {
     }
 
     public static List<Integer> ordList(byte[] data) {
+        if (data == null) return Collections.emptyList();
+
         List<Integer> list = new ArrayList<>();
 
         for (byte b : data) list.add(ord(b));
@@ -151,6 +190,8 @@ public final class Util {
     }
 
     public static boolean contains(byte[] haystack, byte[] needle) {
+        if (haystack == null || needle == null) return false;
+
         for (int i = 0; i < haystack.length - needle.length + 1; i++) {
             if (Arrays.equals(Arrays.copyOfRange(haystack, i, i + needle.length), needle)) return true;
         }
@@ -159,6 +200,8 @@ public final class Util {
     }
 
     public static boolean contains(int[] haystack, int needle) {
+        if (haystack == null) return false;
+
         for (int i : haystack) {
             if (i == needle) return true;
         }
@@ -167,7 +210,8 @@ public final class Util {
     }
 
     public static Set<String> toSet(String string) {
-        return Set.of(string);
+        if (string == null) return Collections.emptySet();
+        return Collections.singleton(string);
     }
 
     public static Set<String> toSet(String... strings) {
@@ -175,26 +219,49 @@ public final class Util {
     }
 
     /**
-     * @param s comma separated string
-     * @return a set of strings
+     * @param s a comma-separated string.
+     * @return an ordered set of strings.
      */
     public static Set<String> commaSeparatedStringToSet(String s) {
-        // split the string by commas, and remove any leading or trailing whitespace
-        String[] parts = s.split("\\s*,\\s*");
+        if (s == null) return Collections.emptySet();
+        return Arrays.stream(s.split(",")).collect(LinkedHashSet::new, Set::add, Set::addAll);
+    }
 
-        return Arrays.stream(parts).collect(LinkedHashSet::new, Set::add, Set::addAll);
+    /**
+     * @param s a comma-separated string.
+     * @return an ordered, sanitised set of strings.
+     */
+    public static Set<String> commaSeparatedStringToSanitisedSet(String s) {
+        return sanitiseSet(commaSeparatedStringToSet(s));
     }
 
     // Helper method to find the index of a byte in a byte array, similar to Python's find() method.
-    public static int indexOf(byte[] array, byte value) {
-        for (int i = 0; i < array.length; i++) {
-            if (array[i] == value) return i;
+    public static int indexOf(byte[] data, byte value) {
+        if (data == null) return -1; // Returns -1 if the array is null
+
+        for (int i = 0; i < data.length; i++) {
+            if (data[i] == value) return i;
         }
 
         return -1; // Returns -1 if the byte is not found in the array
     }
 
     public static String[] toStringArray(List<String> list) {
-        return list.toArray(new String[0]);
+        if (list == null) return new String[0]; // Return an empty array if the list is null
+        return list.toArray(new String[0]); // Convert the list to an array
+    }
+
+    /**
+     * @param set a set of strings.
+     * @return <code>true</code> if the set is <code>null</code>, empty or contains only blank strings, <code>false</code> otherwise.
+     */
+    public static boolean practicalIsEmpty(Set<String> set) {
+        return set == null || set.isEmpty() || set.stream().allMatch(String::isBlank);
+    }
+
+    public static Set<String> sanitiseSet(Set<String> set) {
+        if (practicalIsEmpty(set)) return Collections.emptySet();
+
+        return set.stream().map(String::trim).filter(s -> !s.isBlank()).collect(LinkedHashSet::new, Set::add, Set::addAll);
     }
 }
